--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@
 					  </tbody>
 				  </table>
 				  <div class="text-center fs-3">
-					Total: $<span id="total_price">0</span>
+					Total: <span id="total_price">0</span>
 				  </div>
 				  <div class="text-center"> 
 					<a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
 					<a href="javascript:void(0)" onclick="cleanCart()" class="btn btn-primary m-3">Clean Cart</a>
-					<a href="javascript:void(0)" onclick="generateCart()" class="btn btn-primary m-3">Generate Cart</a>
+					<!-- <a href="javascript:void(0)" onclick="generateCart()" class="btn btn-primary m-3">Generate Cart</a> -->
 				  </div>
 			  </div>
 			</div>
