--- a/checkout.html
+++ b/checkout.html
@@ -77,51 +77,55 @@
 				<h3 class="my-3 bord shadow text-center"><i class="fas fa-stopwatch p-2"></i>Delivery on time</h3>
 			</div>
 		</div>
-		<form class="form">
+		<form class="form needs-validation" novalidate>
 			<div class="row bord p-5 shadow m-5">
 				<div class="col-sm-6">
 					<div class="mt-3">
 						<label for="fName" class="form-label">First Name:</label>
-						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name" />
-						<div id="errorName" class="invalid-feedback">This field is required and must have, at least, 3 characters
+						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name" minlength="3" autocomplete="given-name"/>
+						<div id="errorName" class="invalid-feedback bg-danger p-1 ps-2 text-white">This field is required and must have, at least, 3 characters
 						</div>
 					</div>
 					<div class="mt-3 ">
 						<label for="fEmail" class="form-label">Email:</label>
-						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" />
-						<div id="errorEmail" class="invalid-feedback">This field is required and must contain an '@' and have, at
+						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" autocomplete="email"/>
+						<div id="errorEmail" class="invalid-feedback bg-danger p-1 ps-2 text-white">This field is required and must contain an '@' and have, at
 							least, 3 characters</div>
 					</div>
 					<div class="mt-3 ">
 						<label for="fAddress" class="form-label">Address:</label>
-						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" />
-						<div id="errorAddress" class="invalid-feedback">This field is required and must have, at least, 3 characters
+						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" autocomplete="street-address"/>
+						<div id="errorAddress" class="invalid-feedback bg-danger p-1 ps-2 text-white">This field is required and must have, at least, 3 characters
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-6">
 					<div class="mt-3">
 						<label for="fLastN" class="form-label">Last Name:</label>
-						<input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3" />
-						<div id="errorLastN" class="invalid-feedback">This field is required and must have, at least, 3 characters
+						<input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3" autocomplete="family-name"/>
+						<div id="errorLastN" class="invalid-feedback bg-danger p-1 ps-2 text-white">This field is required and must have, at least, 3 characters
 						</div>
 					</div>
 					<div class="mt-3">
 						<label for="fPassword" class="form-label">Password:</label>
 						<input id="fPassword" class="form-control" title="(4-8 characters)" type="password" minlength="4"
-							maxlength="8" placeholder="Password" />
-						<div id="errorPassword" class="invalid-feedback">Enter a correct password</div>
+							maxlength="8" placeholder="Password" autocomplete="current-password" />
+						<div id="errorPassword" class="invalid-feedback bg-danger p-1 ps-2 text-white">Enter a correct password</div>
 					</div>
 					<div class="mt-3">
 						<label for="fPhone" class="form-label">Phone Number:</label>
-						<input id="fPhone" class="form-control" type="number" placeholder="Phone No." />
-						<div id="errorPhone" class="invalid-feedback">Invalid phone number!! Must be 9 digits with no letters</div>
+						<input id="fPhone" class="form-control" type="tel" placeholder="Phone No." minlength="9" autocomplete="tel"/>
+						<div id="errorPhone" class="invalid-feedback bg-danger p-1 ps-2 text-white">Invalid phone number!! Must be 9 digits with no letters</div>
 					</div>
 				</div>
+				
 				<div class="col-12 mt-4 final">
 					<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()">
 						<i class="fas fa-cart-arrow-down p-2"></i>Save
 					</button>
+					<div class="valid-feedback bg-success text-white p-1 ps-2 w-auto">
+						The checkout has been saved successfully 
+					</div>
 				</div>
 			</div>
 		</form>
@@ -166,8 +170,9 @@
 		crossorigin="anonymous"></script>
 
 	<!-- Core theme JS-->
-	<script src="js/shop.js"></script>
+	<!-- <script src="js/shop.js"></script> -->
 	<script src="js/checkout.js"></script>
+	
 </body>
 
 </html>
