--- a/index.html
+++ b/index.html
@@ -275,6 +275,6 @@
 
         <!-- Core theme JS-->
         <script src="js/shop.js"></script>
-		<script src="js/checkout.js"></script>
+		<!-- <script src="js/checkout.js"></script> -->
     </body>
 </html>
