--- a/checkout.html
+++ b/checkout.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<!-- Core theme CSS (includes Bootstrap)-->
+	<link rel="stylesheet" href="css/checkout.css">
 </head>
 
 <body>
@@ -78,21 +79,21 @@
 			</div>
 		</div>
 		<form class="form needs-validation" novalidate>
-			<div class="row bord p-5 shadow m-5">
-				<div class="col-sm-6">
-					<div class="mt-3">
+			<div class="row bord pb-3 p-md-1 shadow mb-3 m-md-1">
+				<div class="col-lg-6">
+					<div class="mt-sm-3">
 						<label for="fName" class="form-label">First Name:</label>
 						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name" minlength="3" autocomplete="given-name"/>
 						<div id="errorName" class="invalid-feedback bg-danger p-1 ps-2 text-white">This field is required and must have, at least, 3 characters
 						</div>
 					</div>
-					<div class="mt-3 ">
+					<div>
 						<label for="fEmail" class="form-label">Email:</label>
 						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" autocomplete="email"/>
 						<div id="errorEmail" class="invalid-feedback bg-danger p-1 ps-2 text-white">This field is required and must contain an '@' and have, at
 							least, 3 characters</div>
 					</div>
-					<div class="mt-3 ">
+					<div>
 						<label for="fAddress" class="form-label">Address:</label>
 						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" autocomplete="street-address"/>
 						<div id="errorAddress" class="invalid-feedback bg-danger p-1 ps-2 text-white">This field is required and must have, at least, 3 characters
@@ -100,19 +101,19 @@
 					</div>
 				</div>
 				<div class="col-sm-6">
-					<div class="mt-3">
+					<div class="mt-sm-3">
 						<label for="fLastN" class="form-label">Last Name:</label>
 						<input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3" autocomplete="family-name"/>
 						<div id="errorLastN" class="invalid-feedback bg-danger p-1 ps-2 text-white">This field is required and must have, at least, 3 characters
 						</div>
 					</div>
-					<div class="mt-3">
+					<div>
 						<label for="fPassword" class="form-label">Password:</label>
 						<input id="fPassword" class="form-control" title="(4-8 characters)" type="password" minlength="4"
 							maxlength="8" placeholder="Password" autocomplete="current-password" />
 						<div id="errorPassword" class="invalid-feedback bg-danger p-1 ps-2 text-white">Enter a correct password</div>
 					</div>
-					<div class="mt-3">
+					<div>
 						<label for="fPhone" class="form-label">Phone Number:</label>
 						<input id="fPhone" class="form-control" type="tel" placeholder="Phone No." minlength="9" autocomplete="tel"/>
 						<div id="errorPhone" class="invalid-feedback bg-danger p-1 ps-2 text-white">Invalid phone number!! Must be 9 digits with no letters</div>
