--- a/index.html
+++ b/index.html
@@ -15,50 +15,52 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==	" crossorigin="anonymous">
         <!-- Core theme CSS (includes Bootstrap)-->
+		<link rel="stylesheet" href="css/main.css">
     </head>
     <body data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="50">
         <!-- Navigation-->
 		<nav class="navbar py-3 py-lg-0 navbar-light bg-light navbar-expand-lg" id="navbar-example2">
-			 <div class="container d-flex">
-				 <a class="navbar-brand" href="#!">ShopNow</a>
-				 <div class="d-flex flex-row order-lg-last align-items-center">
-				 
-					 <button type="button" class="navbar-toggler order-last collapsed" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						 <span class="navbar-toggler-icon"></span>
-					 </button>
-					 <ul class="navbar-nav me-3 me-lg-0 d-flex flex-row align-items-center">
-						 <li class="dropdown search-dropdown nav-item py-lg-3">						 
-							 <a href="javascript:void(0)" class="btn btn-outline-dark flex-center" type="button" data-bs-toggle="modal" data-bs-target="#cartModal" onclick="open_modal()" data-bs-auto-close="outside">
-								<i class="fa-solid fa-cart-shopping me-1"></i> Cart <span class="badge bg-dark text-white ms-1 rounded-pill" id="count_product">0</span>
-							 </a>
-						 </li>
-					 </ul>
-				 </div>
-
-				 <div id="navbar" class="navbar-collapse collapse">
-
-					 <ul class="navbar-nav me-auto mb-4 mb-lg-0 ms-lg-5">
-						 <li class="nav-item">
-						  <a class="nav-link" href="#grocery"><i class="fas fa-shopping-basket"></i> Grocery</a>
+			<div class="container d-flex">
+				<a class="navbar-brand" href="#!">ShopNow</a>
+				<div class="d-flex flex-row order-lg-last align-items-center">
+				
+					<button type="button" class="navbar-toggler order-last collapsed ms-1" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<ul class="navbar-nav me-0 me-lg-0 d-flex flex-row align-items-center">
+						<li class="dropdown search-dropdown nav-item py-lg-3">						 
+							<a href="javascript:void(0)" class="btn btn-outline-dark flex-center" type="button" data-bs-toggle="modal" data-bs-target="#cartModal" onclick="open_modal()" data-bs-auto-close="outside">
+							   <i class="fas fa-shopping-cart me-1"></i>
+							   <span class="d-none d-sm-inline-block">Cart</span><span class="badge bg-dark text-white ms-1 rounded-pill" id="count_product">0</span>
+							</a>
 						</li>
+					</ul>
+				</div>
+
+				<div id="navbar" class="navbar-collapse collapse">
+
+					<ul class="navbar-nav me-auto mb-4 mb-lg-0 ms-lg-5">
 						<li class="nav-item">
-						  <a class="nav-link" href="#beauty"><i class="fas fa-heart"></i> Beauty</a>
-						</li>
-						<li class="nav-item">
-						  <a class="nav-link" href="#clothes"><i class="fas fa-tshirt"></i> Clothes</a>
-						</li>
+						 <a class="nav-link" href="#grocery"><i class="fas fa-shopping-basket"></i> Grocery</a>
+					   </li>
+					   <li class="nav-item">
+						 <a class="nav-link" href="#beauty"><i class="fas fa-heart"></i> Beauty</a>
+					   </li>
+					   <li class="nav-item">
+						 <a class="nav-link" href="#clothes"><i class="fas fa-tshirt"></i> Clothes</a>
+					   </li>
 
-					 </ul>
-				 </div>
-			 </div>
-		 </nav>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
         <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
+        <header class="bg-dark flex-column d-flex justify-content-end">
+            <div class="container px-lg-5">
+                <div class="text-center text-black opacity-2">
                     <h1 class="display-4 fw-bolder">IT Academy Shop</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Get up to 50% off Today Only!</p>
+                    <p class="lead fw-normal text-black-75 mb-0">Get up to 50% off Today Only!</p>
                 </div>
             </div>
         </header>
@@ -66,10 +68,10 @@
 		<section class="pt-5" id="grocery">
 			<h2 class="text-center"><i class="fas fa-shopping-basket pe-3"></i>Grocery</h2>
 			<div class="container px-4 px-lg-5 mt-5">
-				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+				<div class="row gx-4 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-xl-3 justify-content-center">
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/cookingoil.webp" alt="Cooking oil" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Cooking Oil</h5>
@@ -83,7 +85,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/pasta.webp" alt="Food pasta" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Pasta</h5>
@@ -97,7 +99,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/cupcakes.webp" alt="Instant cupcake mixture" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Instant cupcake mixture</h5>
@@ -116,10 +118,10 @@
 		<section class="pt-5" id="beauty">
 			 <h2 class="text-center"><i class="fas fa-heart pe-3"></i>Beauty</h2>
 			<div class="container px-4 px-lg-5 mt-5">
-				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+				<div class="row gx-4 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-xl-3 justify-content-center">
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/all-in-one.webp" alt="All in one cream" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">All-in-1</h5>
@@ -133,7 +135,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/zero-makeup-kit.webp" alt="Zero makeup kit" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Zero makeup kit</h5>
@@ -147,7 +149,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/lip-tints.webp" alt="Lip tints" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Lip tints</h5>
@@ -166,10 +168,10 @@
 		<section class="pt-5" id="clothes">
 			 <h2 class="text-center"><i class="fas fa-tshirt pe-3"></i>Clothes</h2>
 			<div class="container px-4 px-lg-5 mt-5">
-				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+				<div class="row gx-4 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-xl-3 justify-content-center">
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/lawn-dress.webp" alt="Lawn dress" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Lawn dress</h5>
@@ -183,7 +185,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/lawn-chiffon-combo.webp" alt="Lawn-chiffon combo" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Lawn-chiffon combo</h5>
@@ -197,7 +199,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/toddler-frock.webp" alt="Toddler Frock" />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Toddler Frock</h5>
@@ -228,7 +230,7 @@
 			  </div>
 			  <div class="modal-body">
 				  <h3 class="text-center bill px-5">Shopping Cart</h3>
-				  <table class="table">
+				  <table class="table fs-8">
 					<thead>
 						<tr>
 						  <th scope="col">Product</th>
